// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App On transaction added, should refresh the transaction list 1`] = `
<div
  className="App container"
>
  <h1
    className="display-4"
  >
    Wallet Planner
  </h1>
  <AddTransactions
    onTransactionAdded={[Function]}
    server={
      Object {
        "getTransactions": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": Promise {},
            },
          ],
        },
      }
    }
  />
  <TransactionsView
    currentDate={"2019-02-02T00:00:00.000Z"}
    periodStart={-3}
    periodicity={
      StaticMonthly {
        "days": Array [
          1,
          15,
        ],
      }
    }
    transactions={
      Array [
        Object {
          "amount": 100,
        },
        Object {
          "amount": 200,
        },
      ]
    }
  />
</div>
`;

exports[`App should render correctly 1`] = `
<div
  className="App container"
>
  <h1
    className="display-4"
  >
    Wallet Planner
  </h1>
  <AddTransactions
    onTransactionAdded={[Function]}
    server={
      Object {
        "getTransactions": [MockFunction],
      }
    }
  />
  <TransactionsView
    currentDate={"2019-02-02T00:00:00.000Z"}
    periodStart={-3}
    periodicity={
      StaticMonthly {
        "days": Array [
          1,
          15,
        ],
      }
    }
    transactions={Array []}
  />
</div>
`;
